# Project-Package

01-基于FastAPI的Python项目结构/Backend/: README.md  main.py
01-基于FastAPI的Python项目结构/Backend/api/User/: routes.py
01-基于FastAPI的Python项目结构/Backend/migrations/models/: 0_20250903174651_init.py
02-个人工具汇总平台/: CLAUDE.md  README.md
02-个人工具汇总平台/tools/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
02-个人工具汇总平台/tools/src/: App.vue  main.ts  style.css
02-个人工具汇总平台/tools/src/api/: audio.ts  pdf.ts
02-个人工具汇总平台/tools/src/assets/scss/: button-style.scss  dialog-style.scss  sideBar.scss  table-style.scss  upload-zone.scss  variable.scss
02-个人工具汇总平台/tools/src/components/common/: Header.vue  Side.vue
02-个人工具汇总平台/tools/src/router/: index.ts
02-个人工具汇总平台/tools/src/stores/: index.ts
02-个人工具汇总平台/tools/src/stores/modules/: audio.ts  pdf.ts
02-个人工具汇总平台/tools/src/utils/: Date.ts  URL.ts  request.ts  token.ts
02-个人工具汇总平台/tools/src/views/: home.vue
02-个人工具汇总平台/tools/src/views/modules/: audioFile.vue
02-个人工具汇总平台/tools/src/views/modules/audio/: audioFile.vue  extractAudio.vue  formatConvert.vue
02-个人工具汇总平台/tools/src/views/modules/pdf/: convertPDFtoWord.vue  mergePDF.vue  pdfFile.vue  singlePDF.vue  unlockPDF.vue
02-个人工具汇总平台/toolsbackend/: .gitignore  main.py  pyproject.toml  requirements.txt  settings.py
02-个人工具汇总平台/toolsbackend/api/Audio/: routes.py
02-个人工具汇总平台/toolsbackend/api/Pdf/: routes.py
02-个人工具汇总平台/toolsbackend/api/Pdf/Services/: pdfOperate.py
02-个人工具汇总平台/toolsbackend/api/User/: routes.py
02-个人工具汇总平台/toolsbackend/models/: User.py
