[project]
name = "toolsbackend"
version = "0.1.0"
description = "个人工具汇总平台后端 - FastAPI"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "python-multipart>=0.0.22",
    "pypdf2>=3.0.1",
    "pycryptodome>=3.22.0",
    "pydub>=0.25.1",
    "tortoise-orm>=0.25.1",
    "aerich>=0.9.1",
    "pymysql>=1.1.2",
    "aiomysql>=0.2.0",
    "pydantic>=2.11.7",
    "pdf2docx>=0.5.12",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.uv]
python-downloads = "automatic"
